Bug fix, when the history is too big now it will not overflow Bug fix, when the the result is too big or small, will be presnted in scientific notation

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ button:active {
 
 .function-keys .calculator-key {
     color: white;
-    font-size: 1.1em;
+    font-size: 1.3em;
 }
 
 #btn-0 {
